Trying Fix #1 for countdown timer no visible in deployment

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@
 }
 
 body {
-  background: #fefefe;
+  background: rgba(2, 13, 7, 0.8);
   color: #2f3138;
   font-family: cabin, sans-serif;
   overflow-x: hidden;
@@ -235,7 +235,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #1b1b1b;
   height: 4.375rem;
   padding: 0.9375rem 0;
-  transition: all 0.5s;
+  /* transition: all 0.5s; */
   z-index: 999;
 }
 
@@ -538,7 +538,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   align-items: center;
   justify-content: center;
   padding-top: 7rem;
- 
 }
 
 #bg_video {
@@ -1462,6 +1461,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     flex-direction: column;
     gap: 3.125rem;
     margin-top: -2rem;
+    padding-bottom: 15rem;
   }
 
   #intro .logo-container img {
